# pyopenalsoft

./: CMakeLists.txt  LICENSE  README.md  build.bat
backups/: backups.txt
include/: audio_data.h  buffer.h  context.h  device.h  listener.h  openal_loader.h  source.h  stream.h
src/: audio_data.cpp  buffer.cpp  context.cpp  device.cpp  listener.cpp  openal_loader.cpp  pyopenalsoft.cpp  source.cpp  stream.cpp
